<resources>
    <string name="app_name">Lab7</string>

    <!-- Main Activity String -->
    <string name="select_placesTV">Select a Place:</string>
    <string name="select_firstPlaceTV">Select Starting Point</string>
    <string name="select_secondPlacesTV">Select End-Point:</string>
    <string name="viewDescriptionBTN">View Place Description</string>
    <string name="calculate_distance_checkbox_text">Calculate Great Circle Distance</string>
    <string name="distance_text">Distance:</string>
    <string name="inital_heading_text">Initial Heading:</string>
    <string name="not_defined">Error: Not Defined</string>
    <!-- Main Activity App Bar -->
    <string name="action_addPlace">Add Place</string>
    <string name="action_modifyPlace">Modify Place</string>
    <string name="action_deletePlace">Delete Place</string>


    <!-- Add/Modify Place Activity Strings -->
    <string name="nameLabel">Name:</string>
    <string name="nameHintText">Enter a Place Name</string>

    <string name="descriptionLabel">Description:</string>
    <string name="descriptionHintText">Enter Description</string>

    <string name="categoryLabel">Category:</string>
    <string name="categoryHintText">Enter a Category</string>

    <string name="addressTitleLabel">Address Title:</string>
    <string name="addressTitleHintText">Enter Address Title</string>

    <string name="addressStreetLabel">Address Street:</string>
    <string name="addressStreetHintText">Enter Address Street</string>

    <string name="elevationLabel">Elevation:</string>
    <string name="elevationHintText">Enter Elevation</string>

    <string name="latitudeLabel">Latitude:</string>
    <string name="latitudeHintText">Enter Latitude</string>

    <string name="longitudeLabel">Longitude:</string>
    <string name="longitudeHintText">Enter Longitude</string>

    <!-- Delete Dialog Strings -->
    <string name="errorText">All Boxes Must Be Filled</string>
    <string name="deleteDialogMessage">Are you sure you want to delete this place?</string>
    <string name="deleteDialogPositive">OK</string>
    <string name="deleteDialogNegative">Cancel</string>

    <!-- View Description String -->
    <string-array name="descriptionList">
        <item>Name</item>
        <item>Description</item>
        <item>Category</item>
        <item>Address Title</item>
        <item>Address Street</item>
        <item>Elevation</item>
        <item>Latitude</item>
        <item>Longitude</item>
    </string-array>


</resources>