<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/selectPlace_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="68dp"
        android:text="@string/select_placesTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectSecondPlace_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/select_secondPlacesTV"
        app:layout_constraintStart_toStartOf="@+id/selectPlace_TextView"
        app:layout_constraintTop_toBottomOf="@+id/selectPlace_TextView" />

    <Spinner
        android:id="@+id/places_Spinner"
        android:layout_width="257dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/selectSecondPlace_TextView"
        app:layout_constraintTop_toBottomOf="@+id/selectPlace_TextView" />

    <Spinner
        android:id="@+id/secondPlaces_Spinner"
        android:layout_width="257dp"
        android:layout_height="25dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="@+id/places_Spinner"
        app:layout_constraintTop_toBottomOf="@+id/places_Spinner" />

    <Button
        android:id="@+id/viewPlace_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:onClick="viewPlaceDescription_onClick"
        android:text="@string/viewDescriptionBTN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/calcGreatDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:onClick="onCheckBoxClicked"
        android:text="@string/calculate_distance_checkbox_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/initalHeadingText_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="328dp"
        android:text="@string/inital_heading_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/distanceText_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/distance_text"
        app:layout_constraintBottom_toTopOf="@+id/initalHeadingText_TextView"
        app:layout_constraintEnd_toEndOf="@+id/initalHeadingText_TextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/distanceValue_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:text="@string/not_defined"
        app:layout_constraintBottom_toBottomOf="@+id/distanceText_TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/distanceText_TextView"
        app:layout_constraintTop_toTopOf="@+id/distanceText_TextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/initialHeadingValue_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:text="@string/not_defined"
        app:layout_constraintBottom_toBottomOf="@+id/initalHeadingText_TextView"
        app:layout_constraintStart_toEndOf="@+id/initalHeadingText_TextView"
        app:layout_constraintTop_toTopOf="@+id/initalHeadingText_TextView"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>